--- a/Pravis-Teliken/Views/Shared/_Layout.cshtml
+++ b/Pravis-Teliken/Views/Shared/_Layout.cshtml
@@ -23,7 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Inlog">Inlog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Agenda">Agenda</a>
                         </li>
                     </ul>
                 </div>
@@ -37,9 +43,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Pravis_Teliken - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+@*         <div class="container">
+            &copy; 2024 - Pravis_Teliken - <a asp-area="" asp-controller="Home" asp-action="Inlog">Inlog</a>
+        </div> *@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
